--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="grid">
       <!-- Tile 1: Clicker -->
-      <a class="card" href="https://github.com/MarkDJ23/Clicker" target="_blank" rel="noopener">
+      <a class="card" href="/Demos/Clicker/" target="_blank" rel="noopener">
         <div class="title">Clicker</div>
         <div class="desc">Godot clicker / incremental project. Source + dev logs in repo.</div>
         <div class="tags">
