--- a/index.html
+++ b/index.html
@@ -26,33 +26,55 @@
 </head>
 
 <body>
-  <div class="wrap">
-    <h1>MarkDJ23 — Godot Portfolio</h1>
-    <p>Clickable tiles linking to my GitHub projects.</p>
+    <div class="wrap">
+        <h1>MarkDJ23 — Godot Portfolio</h1>
+        <p>Clickable tiles linking to my GitHub projects.</p>
 
-    <div class="grid">
-      <!-- Tile 1: Clicker -->
-      <a class="card" href="/Demos/Clicker/" target="_blank" rel="noopener">
-        <div class="title">Clicker</div>
-        <div class="desc">Godot clicker / incremental project. Source + dev logs in repo.</div>
-        <div class="tags">
-          <span class="tag">Godot</span><span class="tag">Incremental</span><span class="tag">C# / GDScript</span>
-        </div>
-      </a>
+        <div class="grid">
+            <!-- Tile 1: Clicker -->
+            <a class="card" href="/Demos/MouseKnight/" target="_blank" rel="noopener">
+                <div class="title">Mouse Knight'</div>
+                <div class="desc">Godot JRPG project.</div>
+                <div class="tags">
+                    <span class="tag">Godot</span><span class="tag">RPG</span><span class="tag">GDScript</span>
+                </div>
+            </a>
 
-      <!-- Add more tiles by copying this block -->
-      <a class="card" href="https://github.com/MarkDJ23" target="_blank" rel="noopener">
-        <div class="title">More projects</div>
-        <div class="desc">Browse everything on my GitHub profile.</div>
-        <div class="tags">
-          <span class="tag">GitHub</span>
-        </div>
-      </a>
-    </div>
+            <div class="grid">
+                <!-- Tile 1: Clicker -->
+                <a class="card" href="/Demos/KingsArmy/" target="_blank" rel="noopener">
+                    <div class="title">King's Army'</div>
+                    <div class="desc">Godot clicker / autobattler / incremental project.</div>
+                    <div class="tags">
+                        <span class="tag">Godot</span><span class="tag">Incremental</span><span class="tag">GDScript</span>
+                    </div>
+                </a>
 
-    <footer>
-      <div>GitHub: <a href="https://github.com/MarkDJ23" style="color:inherit;">@MarkDJ23</a></div>
-    </footer>
-  </div>
+                <div class="grid">
+                    <!-- Tile 1: Clicker -->
+                    <a class="card" href="/Demos/Detective/" target="_blank" rel="noopener">
+                        <div class="title">Detective</div>
+                        <div class="desc">Godot Detective game project.</div>
+                        <div class="tags">
+                            <span class="tag">Godot</span><span class="tag">Detective</span><span class="tag">GDScript</span>
+                        </div>
+                    </a>
+
+
+
+                    <!-- Add more tiles by copying this block -->
+                    <a class="card" href="https://github.com/MarkDJ23" target="_blank" rel="noopener">
+                        <div class="title">More projects</div>
+                        <div class="desc">Browse everything on my GitHub profile.</div>
+                        <div class="tags">
+                            <span class="tag">GitHub</span>
+                        </div>
+                    </a>
+                </div>
+
+                <footer>
+                    <div>GitHub: <a href="https://github.com/MarkDJ23" style="color:inherit;">@MarkDJ23</a></div>
+                </footer>
+            </div>
 </body>
 </html>
