--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="grid">
             <!-- Tile 1: Clicker -->
             <a class="card" href="/Demos/MouseKnight/" target="_blank" rel="noopener">
-                <div class="title">Mouse Knight'</div>
+                <div class="title">Mouse Knight</div>
                 <div class="desc">Godot JRPG project.</div>
                 <div class="tags">
                     <span class="tag">Godot</span><span class="tag">RPG</span><span class="tag">GDScript</span>
@@ -42,7 +42,7 @@
 
                 <!-- Tile 1: Clicker -->
                 <a class="card" href="/Demos/KingsArmy/" target="_blank" rel="noopener">
-                    <div class="title">King's Army'</div>
+                    <div class="title">King's Army</div>
                     <div class="desc">Godot clicker / autobattler / incremental project.</div>
                     <div class="tags">
                         <span class="tag">Godot</span><span class="tag">Incremental</span><span class="tag">GDScript</span>
