--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </a>
 
                 <!-- Tile 1: Clicker -->
-                <a class="card" href="/Demos/KingsArmy/" target="_blank" rel="noopener">
+                <a class="card" href="/Demos/KingsArmy/Web/" target="_blank" rel="noopener">
                     <div class="title">King's Army</div>
                     <div class="desc">Godot clicker / autobattler / incremental project.</div>
                     <div class="tags">
