--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>MarkDJ23 — Godot Portfolio</title>
+    <title>MarkDJ23 — Godot Demos</title>
 
     <style>
         :root {
