--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             </div>
 
             <div class="actions">
-                <a class="btn" href="https://github.com/MarkDJ23" target="_blank" rel="noopener">GitHub Profile</a>
+                <!--<a class="btn" href="https://github.com/MarkDJ23" target="_blank" rel="noopener">GitHub Profile</a>-->
                 <!-- Optional: add your resume link later -->
                 <!-- <a class="btn" href="/resume.pdf" target="_blank" rel="noopener">Resume</a> -->
             </div>
