--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                 </div>
             </a>
 
-            <a class="card" href="https://github.com/MarkDJ23" target="_blank" rel="noopener">
+            <!--<a class="card" href="https://github.com/MarkDJ23" target="_blank" rel="noopener">
                 <div class="row">
                     <h3 class="title">More Projects</h3>
                     <span class="badge">GitHub</span>
@@ -315,11 +315,11 @@
                 <div class="tags">
                     <span class="tag">GitHub</span><span class="tag">Repos</span>
                 </div>
-            </a>
+            </a>-->
         </div>
 
         <footer>
-            <div>GitHub: <a href="https://github.com/MarkDJ23" target="_blank" rel="noopener">@MarkDJ23</a></div>
+            <!--<div>GitHub: <a href="https://github.com/MarkDJ23" target="_blank" rel="noopener">@MarkDJ23</a></div>-->
             <div>Last updated via automated demo deploys</div>
         </footer>
     </div>
