--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             <div class="hero">
                 <h1>MarkDJ23</h1>
                 <p class="subtitle">
-                    Godot projects and playable demos. Click a tile to launch a demo in your browser, or jump to the source on GitHub.
+                    Godot projects and playable demos. Click a tile to launch a demo in your browser.
                 </p>
             </div>
 
