--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     <div class="wrap">
         <div class="top">
             <div class="hero">
-                <h1>MarkDJ23</h1>
+                <h1>Faustian Labs</h1>
                 <p class="subtitle">
                     Godot projects and playable demos. Click a tile to launch a demo in your browser.
                 </p>
