--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 </div>
             </a>
 
-            <a class="card" href="/Demos/KingsArmy/Web/" target="_blank" rel="noopener">
+            <!--<a class="card" href="/Demos/KingsArmy/Web/" target="_blank" rel="noopener">
                 <div class="row">
                     <h3 class="title">King's Army</h3>
                     <span class="badge">Playable Demo</span>
@@ -293,7 +293,7 @@
                 <div class="tags">
                     <span class="tag">Godot</span><span class="tag">Incremental</span><span class="tag">GDScript</span>
                 </div>
-            </a>
+            </a>-->
 
             <a class="card" href="/Demos/Detective/" target="_blank" rel="noopener">
                 <div class="row">
